--- a/PR126-beginDelayedTransition/app/src/main/res/layout/activity_main.xml
+++ b/PR126-beginDelayedTransition/app/src/main/res/layout/activity_main.xml
@@ -2,24 +2,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/btnAgregar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/agregar_elemento" />
+        android:text="@string/agregar_elemento"
+        android:layout_marginLeft="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"/>
+
+    <Spinner
+        android:id="@+id/spnAnimacion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/btnAgregar"
+        android:layout_toEndOf="@+id/btnAgregar"
+        android:layout_marginLeft="@dimen/activity_vertical_margin"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:entries="@array/animaciones"
+        android:layout_alignBaseline="@+id/btnAgregar"/>
 
     <LinearLayout
         android:id="@+id/llContenedor"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/btnAgregar"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:gravity="center_horizontal"
+        android:padding="@dimen/activity_vertical_margin"/>
 
 </RelativeLayout>
