--- a/PR128-OverridePendingTransition/app/src/main/res/anim/pull_right.xml
+++ b/PR128-OverridePendingTransition/app/src/main/res/anim/pull_right.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/linear_interpolator">
     <translate
-        android:fromXDelta="0"
-        android:toXDelta="100%"
-        android:duration="500"/>
+        android:fromXDelta="-100%"
+        android:toXDelta="0"
+        android:duration="@android:integer/config_longAnimTime"/>
 </set>
