--- a/PR128-OverridePendingTransition/app/src/main/res/layout/activity_main.xml
+++ b/PR128-OverridePendingTransition/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,47 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:gravity="center|center_horizontal"
     tools:context=".MainActivity">
 
+
     <TextView
-        android:id="@+id/lblTexto"
-        android:text="@string/soy_la_actividad_llamadora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceLarge" />
+        android:text="@string/animacion_de_salida"
+        android:id="@+id/lblSalida"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spnSalida"
+        android:layout_below="@+id/lblSalida"
+        android:entries="@array/animaciones_salida"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/animacion_de_entrada"
+        android:layout_below="@+id/spnSalida"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:id="@+id/lblEntrada"/>
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spnEntrada"
+        android:layout_below="@+id/lblEntrada"
+        android:entries="@array/animaciones_entrada"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ir_a_la_otra_actividad"
+        android:id="@+id/btnIr"
+        android:layout_below="@+id/spnEntrada"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
