--- a/PR127-ActivityTransitions/app/src/main/res/layout/activity_otra.xml
+++ b/PR127-ActivityTransitions/app/src/main/res/layout/activity_otra.xml
@@ -11,4 +11,13 @@
         android:scaleType="centerCrop"
         android:clickable="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button3"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="105dp"/>
+
 </RelativeLayout>
