--- a/PR127-ActivityTransitions/app/src/main/res/values-v21/styles.xml
+++ b/PR127-ActivityTransitions/app/src/main/res/values-v21/styles.xml
@@ -2,6 +2,12 @@
 <resources>
     <!-- Tema de la aplicación (api 21+) -->
     <style name="AppTheme" parent="AppBaseTheme">
+        <!-- Se habilitan las animaciones en las transiciones. -->
+        <item name="android:windowContentTransitions">true</item>
+        <!-- Se indican las animaciones de entrada y de salida. -->
+        <item name="android:windowEnterTransition">@android:transition/slide_top</item>
+        <item name="android:windowExitTransition">@android:transition/slide_bottom</item>
+        <!-- Más definiciones... -->
     </style>
 
 </resources>
