--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/activity_detalle.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/activity_detalle.xml
@@ -66,7 +66,9 @@
         android:id="@+id/fabAccion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/fab_margin_bottom"
+        android:layout_marginRight="@dimen/fab_margin_right"
+        android:layout_marginEnd="@dimen/fab_margin_right"
         android:src="@drawable/ic_discuss"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|right|end"/>
