--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_tablayout.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_tablayout.xml
@@ -51,9 +51,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
-            android:layout_marginBottom="@dimen/fab_margin"
-            android:layout_marginRight="@dimen/fab_margin"
-            android:layout_marginEnd="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/fab_margin_bottom"
+            android:layout_marginRight="@dimen/fab_margin_right"
+            android:layout_marginEnd="@dimen/fab_margin_right"
             android:src="@drawable/ic_done"/>
 
     </android.support.design.widget.CoordinatorLayout>
