--- a/PR105-MaterialNavigationDrawer/app/src/main/res/values-v19/dimens.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/values-v19/dimens.xml
@@ -4,6 +4,9 @@
     <!-- Navigation drawer -->
     <dimen name="navigation_drawer_header_profile_marginTop">41dp</dimen>
 
+    <!-- FAB -->
+    <dimen name="fab_margin_bottom">0dp</dimen>
+
     <!-- Fake StatusBar -->
     <dimen name="statusBarHeight">25dp</dimen>
     <dimen name="collapsingtoolbarHeight">81dp</dimen>
