--- a/PR105-MaterialNavigationDrawer/app/src/main/res/values-v21/dimens.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/values-v21/dimens.xml
@@ -6,7 +6,7 @@
     <dimen name="navigation_drawer_header_profile_marginTop">41dp</dimen>
 
     <!-- FAB -->
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_margin_bottom">16dp</dimen>
 
     <!-- Fake StatusBar -->
     <dimen name="statusBarHeight">0dp</dimen>
