--- a/PR105-MaterialNavigationDrawer/app/src/main/res/values/dimens.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/values/dimens.xml
@@ -32,7 +32,8 @@
     <dimen name="two_line_secundary_icon_marginRight">16dp</dimen>
 
     <!-- FAB -->
-    <dimen name="fab_margin">0dp</dimen>
+    <dimen name="fab_margin_right">16dp</dimen>
+    <dimen name="fab_margin_bottom">16dp</dimen>
 
     <!-- Collapsing Toolbar -->
     <dimen name="extendedappbarHeight">128dp</dimen>
