PR105 remove useless code when orientation change

--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_tab1_item.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_tab1_item.xml
@@ -32,7 +32,7 @@
         tools:text="Baldomero Llegate Ligero"
         android:layout_marginRight="@dimen/two_line_text_marginRight"
         android:layout_marginEnd="@dimen/two_line_text_marginRight"
-        android:textSize="@dimen/abc_text_size_subhead_material" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
     <TextView
         android:id="@+id/lblDireccion"
