--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/activity_main.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,7 @@
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="@bool/fitsSystemWindows"
-        />
-
+        android:fitsSystemWindows="@bool/fitsSystemWindows" />
 
     <!-- Vista de navegación. Debe ser el segundo hijo.
          android:layout_gravity debe ser start.
