--- a/PR149-TextInputLayout/app/src/main/res/layout/activity_main.xml
+++ b/PR149-TextInputLayout/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tilNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_margin"
         app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
 
         <EditText
