--- a/PR158-Realm/app/src/main/res/values-v19/dimens.xml
+++ b/PR158-Realm/app/src/main/res/values-v19/dimens.xml
@@ -3,4 +3,8 @@
     <!-- Fake StatusBar -->
     <dimen name="statusBarHeight">24dp</dimen>
 
+    <!-- FAB -->
+    <dimen name="fab_marginBottom">0dp</dimen>
+
+
 </resources>
