--- a/PR158-Realm/app/src/main/res/values/styles.xml
+++ b/PR158-Realm/app/src/main/res/values/styles.xml
@@ -12,4 +12,10 @@
 
     </style>
 
+    <!-- Tema de la actividad de detalle -->
+    <style name="DetalleTheme" parent="AppThemeBase">
+
+    </style>
+
+
 </resources>
