--- a/PR158-Realm/app/src/main/res/layout/activity_main.xml
+++ b/PR158-Realm/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_marginBottom="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/fab_marginBottom"
             android:layout_marginRight="@dimen/fab_margin"
             android:layout_marginEnd="@dimen/fab_margin"
             android:src="@drawable/ic_action_add"/>
