--- a/PR158-Realm/app/src/main/res/values-v21/dimens.xml
+++ b/PR158-Realm/app/src/main/res/values-v21/dimens.xml
@@ -4,6 +4,6 @@
     <dimen name="statusBarHeight">0dp</dimen>
 
     <!-- FAB -->
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_marginBottom">16dp</dimen>
 
 </resources>
