--- a/PR159-PreLollipopActivityTransition/app/src/main/res/values-port-v21/styles.xml
+++ b/PR159-PreLollipopActivityTransition/app/src/main/res/values-port-v21/styles.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
@@ -9,11 +9,10 @@
     </style>
 
     <style name="AppTheme" parent="AppBaseTheme">
-
     </style>
 
     <style name="CollapsingTheme" parent="AppBaseTheme">
-
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
-
 </resources>
