--- a/PR157-GridRecyclerView/app/src/main/res/values-port-v21/styles.xml
+++ b/PR157-GridRecyclerView/app/src/main/res/values-port-v21/styles.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
@@ -9,11 +9,14 @@
     </style>
 
     <style name="AppTheme" parent="AppBaseTheme">
-
+        <!-- Se habilitan las animaciones en las transiciones -->
+        <item name="android:windowContentTransitions">true</item>
+        <!-- Se indican las animaciones de entrada y de salida. -->
+        <item name="android:windowSharedElementsUseOverlay">false</item>
     </style>
 
     <style name="CollapsingTheme" parent="AppBaseTheme">
-
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
-
 </resources>
