--- a/PR157-GridRecyclerView/app/src/main/res/values/dimens.xml
+++ b/PR157-GridRecyclerView/app/src/main/res/values/dimens.xml
@@ -1,8 +1,8 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="info_height">68dp</dimen>
     <dimen name="info_padding">16dp</dimen>
     <dimen name="info_textSize">14sp</dimen>
+    <dimen name="appbar_height">256dp</dimen>
+    <dimen name="collapsing_titleMarginStart">32dp</dimen>
 </resources>
