--- a/PR157-GridRecyclerView/app/src/main/res/values/fractions.xml
+++ b/PR157-GridRecyclerView/app/src/main/res/values/fractions.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <fraction name="dimen_foto_detalle">40%</fraction>
+    <fraction name="dimen_webview">60%</fraction>
+    <fraction name="dimen_imagen">40%</fraction>
 </resources>
