--- a/PR163-PageTransformer/app/src/main/res/layout/fragment_main.xml
+++ b/PR163-PageTransformer/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     tools:context=".MainActivity$PaginaFragment">
 
     <TextView
-        android:id="@+id/section_label"
+        android:id="@+id/lblTexto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/fragment_textview_textSize"
