--- a/PR123-MaterialToolbarDropdown/app/src/main/res/layout/activity_main.xml
+++ b/PR123-MaterialToolbarDropdown/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context=".MainActivity">
 
     <View
         android:layout_width="match_parent"
@@ -15,24 +15,22 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="@dimen/abc_action_bar_default_height_material"
+        android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:theme="@style/ToolbarTheme">
-        <RelativeLayout
+        android:theme="@style/ToolbarTheme"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <Spinner
+            android:id="@+id/spn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <Spinner
-                android:id="@+id/spn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:dropDownVerticalOffset="@dimen/spinner_verticlaOffset" />
-        </RelativeLayout>
+            android:layout_height="wrap_content"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
     </android.support.v7.widget.Toolbar>
+
     <FrameLayout
         android:id="@+id/flContenido"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
