--- a/PR160-CollapsingToolbarTabLayout/app/src/main/res/layout/activity_main.xml
+++ b/PR160-CollapsingToolbarTabLayout/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_content"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/htab_collapse_toolbar"
+            android:id="@+id/collapsingToolbar"
             android:layout_width="match_parent"
             android:layout_height="256dp"
             android:fitsSystemWindows="true"
@@ -25,12 +25,13 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
-                android:id="@+id/htab_header"
+                android:id="@+id/imgCabecera"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/foto0"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
+                android:contentDescription="@string/cabecera"
                 app:layout_collapseMode="parallax" />
 
             <!-- height 104dp = 56dp + 48dp (action bar + tablayout)
@@ -38,10 +39,10 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="104dp"
+                android:layout_height="@dimen/toolbar_layoutHeight"
                 android:minHeight="?attr/actionBarSize"
                 android:gravity="top"
-                app:titleMarginTop="13dp"
+                app:titleMarginTop="@dimen/toolbar_titleMarginTop"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
@@ -52,15 +53,14 @@
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                app:tabIndicatorColor="@android:color/white"/>
+                android:layout_gravity="bottom"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/container"
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
