--- a/PR160-CollapsingToolbarTabLayout/app/src/main/res/values/dimens.xml
+++ b/PR160-CollapsingToolbarTabLayout/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="toolbar_layoutHeight">104dp</dimen>
+    <dimen name="toolbar_titleMarginTop">13dp</dimen>
+    <dimen name="lblTexto_textSize">90sp</dimen>
 </resources>
