--- a/PR131-AsyncTask/app/src/main/res/layout/activity_main.xml
+++ b/PR131-AsyncTask/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,64 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_vertical" >
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical">
 
     <ProgressBar
         android:id="@+id/prbBarra"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/activity_margin"
         android:indeterminate="false"
-        android:max="10"
-        android:padding="4dip"
-        android:layout_centerHorizontal="true" 
-        android:layout_marginBottom="10dp"       
-        android:visibility="invisible" />
+        android:max="@integer/numPasos"
+        android:padding="@dimen/progressBar_padding"
+        android:visibility="invisible"/>
 
-    <Button
-        android:id="@+id/btnIniciar"
+    <LinearLayout
+        android:id="@+id/llBotonera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"        
         android:layout_below="@+id/prbBarra"
-        android:layout_marginBottom="10dp"       
-        android:text="@string/iniciar" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/activity_margin"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnIniciar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/activity_margin"
+            android:layout_marginEnd="@dimen/activity_margin"
+            android:text="@string/iniciar"/>
+
+        <Button
+            android:id="@+id/btnCancelar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cancelar"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/lblMensaje"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"        
-        android:text="@string/trabajando"
-        android:layout_marginBottom="10dp"       
-        android:layout_below="@+id/btnIniciar"
-        android:visibility="invisible" >
+        android:layout_below="@+id/llBotonera"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/activity_margin"
+        android:visibility="invisible"
+        tools:text="@string/trabajando">
     </TextView>
 
     <ProgressBar
         android:id="@+id/prbCirculo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:indeterminate="false"
-        android:max="10"
-        android:layout_centerHorizontal="true"        
         android:layout_below="@+id/lblMensaje"
-        android:visibility="invisible" />
-    
+        android:layout_centerHorizontal="true"
+        android:indeterminate="false"
+        android:max="@integer/numPasos"
+        android:visibility="invisible"/>
+
 </RelativeLayout>
