--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/activity_detalle.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/activity_detalle.xml
@@ -39,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/collapsingtoolbarHeight"
                 android:paddingTop="@dimen/statusBarHeight"
-                android:fitsSystemWindows="@bool/fitsSystemWindows"
+                android:fitsSystemWindows="false"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
