--- a/PR083-VolleyJSON/app/src/main/res/values/styles.xml
+++ b/PR083-VolleyJSON/app/src/main/res/values/styles.xml
@@ -1,24 +1,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
-    </style>
-
-    <!-- Botón plano -->
-    <style name="AppCompat.Button.Flat.Common" parent="Base.TextAppearance.AppCompat.Button">
-        <item name="android:minWidth">@dimen/btn_flat_min_width</item>
-        <item name="android:minHeight">@dimen/btn_flat_min_height</item>
-        <item name="android:textColor">@drawable/color_btn_flat_selector</item>
-        <item name="android:background">@drawable/btn_flat_selector</item>
-        <item name="android:textAllCaps">true</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:paddingLeft">@dimen/btn_flat_padding</item>
-        <item name="android:paddingRight">@dimen/btn_flat_padding</item>
-        <item name="android:layout_marginLeft">@dimen/btn_flat_margin</item>
-        <item name="android:layout_marginRight">@dimen/btn_flat_margin</item>
     </style>
 
 </resources>
