--- a/PR166-SQLiteDAORecyclerViewCursorAdapter/app/src/main/res/layout/fragment_alumno.xml
+++ b/PR166-SQLiteDAORecyclerViewCursorAdapter/app/src/main/res/layout/fragment_alumno.xml
@@ -1,86 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.NestedScrollView
+    android:id="@+id/nsvScrollView"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
+    xmlns:ls="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/fragment_alumno_padding">
 
-        <LinearLayout
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/fragment_alumno_padding">
-
-            <TextView
-                android:id="@+id/lblNombre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/nombre" />
+            android:layout_marginBottom="@dimen/fragment_alumno_marginBottom">
 
             <EditText
                 android:id="@+id/txtNombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
-                android:inputType="textPersonName" />
+                android:hint="@string/nombre"
+                android:inputType="textPersonName"/>
 
-            <TextView
-                android:id="@+id/lblCurso"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/curso" />
+        </android.support.design.widget.TextInputLayout>
 
-            <Spinner
-                android:id="@+id/spnCurso"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilCurso"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/fragment_alumno_marginBottom">
+
+            <es.iessaladillo.pedrojoya.pr166.utils.ClickToSelectEditText
+                android:id="@+id/txtCurso"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/fragment_alumno_marginBottom" />
+                android:hint="@string/curso"
+                android:drawableRight="@drawable/ic_arrow_drop_down"
+                android:drawableEnd="@drawable/ic_arrow_drop_down"
+                android:inputType="none"/>
 
-            <TextView
-                android:id="@+id/lblTelefono"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/telefono" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilTelefono"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/fragment_alumno_marginBottom">
 
             <EditText
                 android:id="@+id/txtTelefono"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
-                android:inputType="phone" />
+                android:hint="@string/telefono"
+                android:inputType="phone"/>
 
-            <TextView
-                android:id="@+id/lblDireccion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/direccion" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilDireccion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/fragment_alumno_marginBottom">
 
             <EditText
                 android:id="@+id/txtDireccion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
-                android:inputType="textPostalAddress" />
-        </LinearLayout>
+                android:hint="@string/direccion"
+                android:inputType="textPostalAddress"/>
 
-    </ScrollView>
+        </android.support.design.widget.TextInputLayout>
 
-    <com.software.shell.fab.ActionButton
-        android:id="@+id/btnGuardar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="@dimen/fab_margin"
-        fab:button_color="@color/accent"
-        fab:button_colorPressed="@color/accent_light"
-        fab:image="@drawable/fab_save_icon"
-        fab:show_animation="@anim/fab_roll_from_down"
-        fab:hide_animation="@anim/fab_roll_to_down" />
+    </LinearLayout>
 
-</FrameLayout>
+</android.support.v4.widget.NestedScrollView>
