PR140 Change to Retrofit 2

--- a/PR139-InstagramRetrofit/app/src/main/res/layout/activity_main_item.xml
+++ b/PR139-InstagramRetrofit/app/src/main/res/layout/activity_main_item.xml
@@ -21,7 +21,7 @@
         android:gravity="center"
         android:minHeight="@dimen/single_line_grid_footer_minHeight"
         android:padding="@dimen/single_line_grid_footer_padding"
-        android:textColor="@color/primary_text_default_material_dark"
-        android:textSize="@dimen/abc_text_size_subhead_material"
+        style="@style/TextAppearance.AppCompat.Subhead"
+        android:textColor="@android:color/white"
         tools:text="Quillo que"/>
 </FrameLayout>
