--- a/PR140-RetrofitXML/app/src/main/res/layout/activity_main.xml
+++ b/PR140-RetrofitXML/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,11 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
             <Spinner
                 android:id="@+id/spnToolbar"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
