--- a/PR168-Firebase/app/src/main/res/menu/activity_main.xml
+++ b/PR168-Firebase/app/src/main/res/menu/activity_main.xml
@@ -4,5 +4,5 @@
     <item
         android:id="@+id/mnuLogout"
         android:title="@string/desconectarse"
-        app:showAsAction="ifRoom|withText" />
+        app:showAsAction="never" />
 </menu>
