--- a/PR170-DBFlow/app/src/main/res/layout/activity_alumno.xml
+++ b/PR170-DBFlow/app/src/main/res/layout/activity_alumno.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:fab="http://schemas.android.com/apk/res-auto"
-             xmlns:app="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -66,6 +66,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
                 android:inputType="textPostalAddress" />
+
+            <TextView
+                android:id="@+id/lblAsignaturas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/asignaturas" />
+
+            <ListView
+                android:id="@+id/lstAsignaturas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@null"
+                android:layout_marginBottom="@dimen/fragment_alumno_marginBottom" />
+
         </LinearLayout>
 
     </ScrollView>
@@ -75,9 +89,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin"
-        android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
         android:src="@drawable/fab_save_icon"
         app:elevation="6dp"
         app:pressedTranslationZ="12dp" />
