Update to Android Studio 2.0

--- a/PR010-ScrollView/app/src/main/res/layout/activity_main.xml
+++ b/PR010-ScrollView/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,9 @@
         android:layout_alignParentStart="true"
         android:background="@color/primary_light"
         android:paddingLeft="@dimen/panel_paddingLeft"
+        android:paddingStart="@dimen/panel_paddingLeft"
         android:paddingRight="@dimen/panel_paddingRight"
+        android:paddingEnd="@dimen/panel_paddingRight"
         android:paddingTop="@dimen/panel_paddingTop"
         android:paddingBottom="@dimen/panel_paddingBottom"
         >
