--- a/PR012-ListViewOptimizado/app/src/main/res/layout/activity_main.xml
+++ b/PR012-ListViewOptimizado/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/lstAlumnos"
@@ -8,9 +8,9 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:divider="@android:color/transparent"
-        android:padding="10dp"
-        android:scrollbarStyle="outsideOverlay"
-        android:dividerHeight="10dp"/>
+        android:dividerHeight="@dimen/list_dividerHeight"
+        android:padding="@dimen/list_padding"
+        android:scrollbarStyle="outsideOverlay"/>
 
     <TextView
         android:id="@+id/lblEmpty"
@@ -19,4 +19,4 @@
         android:gravity="center"
         android:text="@string/listado_de_alumnos"/>
 
-</FrameLayout>
+</merge>
